# extracted_summary_sentences_match

./: README.md  pyproject.toml
tests/: test_validator.py
validator/: __init__.py  main.py
