[project]
name = "extracted_summary_sentences_match"
version = "0.0.0"
description = "Validates that the extracted summary sentences match the original text by performing a cosine similarity in the embedding space."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "guardrails-ai>=0.4.2",
    "faiss-cpu",
    "openai",
    "sqlalchemy"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
]